--- a/.gitignore
+++ b/.gitignore
@@ -490,3 +490,26 @@ $RECYCLE.BIN/
 /ScreenSound/obj/Debug/net8.0/ScreenSound.dll
 /ScreenSound/obj/Debug/net8.0/ScreenSound.pdb
 /ScreenSound/obj/Debug/net8.0/ScreenSound.sourcelink.json
+/.vs/ProjectEvaluation/screensound.metadata.v9.bin
+/.vs/ProjectEvaluation/screensound.projects.v9.bin
+/.vs/ProjectEvaluation/screensound.strings.v9.bin
+/.vs/ScreenSound/DesignTimeBuild/.dtbcache.v2
+/.vs/ScreenSound/v17/.futdcache.v2
+/.vs/ScreenSound/v17/.suo
+/.vs/ScreenSound/v17/DocumentLayout.json
+/.vs/ScreenSound/v17/DocumentLayout.backup.json
+/ScreenSound/bin/Debug/net8.0/ScreenSound.dll
+/ScreenSound/bin/Debug/net8.0/ScreenSound.exe
+/ScreenSound/bin/Debug/net8.0/ScreenSound.pdb
+/ScreenSound/obj/Debug/net8.0/ref/ScreenSound.dll
+/ScreenSound/obj/Debug/net8.0/refint/ScreenSound.dll
+/ScreenSound/obj/Debug/net8.0/apphost.exe
+/ScreenSound/obj/Debug/net8.0/ScreenSound.AssemblyInfo.cs
+/ScreenSound/obj/Debug/net8.0/ScreenSound.csproj.CoreCompileInputs.cache
+/ScreenSound/obj/Debug/net8.0/ScreenSound.AssemblyInfoInputs.cache
+/ScreenSound/obj/Debug/net8.0/ScreenSound.dll
+/ScreenSound/obj/Debug/net8.0/ScreenSound.pdb
+/ScreenSound/obj/Debug/net8.0/ScreenSound.sourcelink.json
+/ScreenSound/obj/project.assets.json
+/ScreenSound/obj/project.nuget.cache
+/ScreenSound/obj/ScreenSound.csproj.nuget.dgspec.json
